# prototype-design

./: .database.sql  .gitignore  README.md  justfile  package-lock.json  package.json
.github/workflows/: database.yml  rust.yml
app/: babel.config.js  package-lock.json  package.json
app/public/: index.html
app/src/: AddAssignments.js  App.js  ListOfAssignments.js  assignments.js  globalStyles.css  index.js  setupTests.js  styles.css
app/src/pages/: AddAssignments.js  EditAssignment.js  GradeSubmission.js  LogsView.js  SubmissionsList.js
app/src/tests/: AddAssignment.test.js  ListOfAssignments.test.js  SubmissionsList.test.js
libcontainer/: Cargo.toml  README.md  package.json
libcontainer/bridge/: Cargo.toml  README.md  package.json
libcontainer/bridge/src/: engine.rs  error.rs  image.rs  lib.rs  service.rs  utils.rs
libcontainer/bridge/src/binding/: engine.rs  image.rs  mod.rs  parse.rs  utils.rs
libcontainer/daemon/: Cargo.toml
libcontainer/daemon/src/: engine.rs  error.rs  main.rs  service.rs  sys.rs
libcontainer/shared/: Cargo.toml
libcontainer/shared/src/: engine.rs  error.rs  image.rs  lib.rs  macros.rs
libcontainer/shared/tests/: parse.rs
server/: .env  index.js  package-lock.json  package.json
server/config/: db.js
server/tests/: database-test.js
