[package]
name = "libcontainer-bridge"
version = "0.1.0"
description = "Node.JS bridge for libcontainer"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
shared = { path = "../shared" }
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
