[package]
name = "libcontainer-bridge"
version = "0.1.0"
description = "Node.JS bridge for libcontainer"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.35"
neon = "1"
serde_json = "1.0.133"
shared = { path = "../shared" }
tar = "0.4.43"
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }
