[package]
name = "daemon"
description = "Root daemon for libcontainer daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = "0.29.0"
serde_json = "1.0.133"
shared = { path = "../shared" }
thiserror = "2.0.3"

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread", "process", "fs"]
