[package]
name = "daemon"
description = "Root daemon for libcontainer daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["sched", "resource", "user"] }
serde_json = "1.0.133"
shared = { path = "../shared" }
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread", "process", "fs", "io-util"]
